tests/typechecking/invalid/var_range.ml
(* b hors de portée *)
let a =
	(let b = 1 in b + 2)
in print_int b
